force-app/main/default/objects/ssot__Lead__dlm/fields/KQ_ContactPointEmailId__c.field-meta.xml
<CustomField>
    <fullName>KQ_ContactPointEmailId__c</fullName>
    <label>Key Qualifier Contact Point Email</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>KQ_ContactPointEmailId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>