force-app/main/default/objects/ssot__Lead__dlm/fields/KQ_ConvertedToAccountContactId__c.field-meta.xml
<CustomField>
    <fullName>KQ_ConvertedToAccountContactId__c</fullName>
    <label>Key Qualifier Converted To AccountContac</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>KQ_ConvertedToAccountContactId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>