force-app/main/default/objects/ssot__Lead__dlm/fields/KQ_ConvertedToAccountId__c.field-meta.xml
<CustomField>
    <fullName>KQ_ConvertedToAccountId__c</fullName>
    <label>Key Qualifier Converted To Account</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>KQ_ConvertedToAccountId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>