force-app/main/default/objects/ssot__Lead__dlm/fields/KQ_PhoneContactPointId__c.field-meta.xml
<CustomField>
    <fullName>KQ_PhoneContactPointId__c</fullName>
    <label>Key Qualifier Phone Contact Point</label>
    <length>60</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>KQ_PhoneContactPointId</refAttrDeveloperName>
        <usageTag>KeyQualifier</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>